--- a/app/views/smartrent/admin/more_homes/index.html.erb
+++ b/app/views/smartrent/admin/more_homes/index.html.erb
@@ -1,35 +1,49 @@
-<h1>Listing More Homes</h1>
-<div class="links pull-right">
-  <%= link_to 'Import More Homes', import_admin_more_homes_path, :class => "btn btn-default" %>
-  <%= link_to 'New More Home', new_admin_more_home_path, :class => "btn btn-primary" %>
-</div>
-<br />
-<br />
-<br />
-<% if @more_homes.present? %>
-  <table class="table">
-    <tr>
-      <th>Name</th>
-      <th>Beds</th>
-      <th>Baths</th>
-      <th>Sq ft</th>
-      <th>Featured</th>
-      <th>Home</th>
-      <th>Actions</th>
-    </tr>
-  <% @more_homes.each do |more_home| %>
-    <tr>
-      <td><%= more_home.name %></td>
-      <td><%= more_home.beds %></td>
-      <td><%= more_home.baths %></td>
-      <td><%= more_home.sq_ft %></td>
-      <td><%= more_home.featured %></td>
-      <td><%= more_home.home.title %></td>
-      <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_admin_more_home_path(more_home) %> | <%= link_to 'Destroy', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </table>
-  <%= will_paginate @more_homes, renderer: BootstrapPagination::Rails %>
-<% else %>
-  <div class="alert alert-warning">No More Homes have been added yet.</div>
+<% content_for(:ui_center) do %>
+  <div class="listing">
+    <div class="links pull-right">
+      <%= link_to 'Import More Homes', import_admin_more_homes_path, :class => "btn btn-default" %>
+      <%= link_to 'New More Home', new_admin_more_home_path, :class => "btn btn-primary" %>
+    </div>
+    <h3>Listing more_homes</h3>
+
+    <% if @more_homes.present? %>
+      <table class="table">
+        <tr>
+          <th>Name</th>
+          <th>Beds</th>
+          <th>Baths</th>
+          <th>Sq ft</th>
+          <th>Featured</th>
+          <th>Home</th>
+          <th>Actions</th>
+        </tr>
+        <% @more_homes.each do |more_home| %>
+          <tr>
+            <td><%= more_home.name %></td>
+            <td><%= more_home.beds %></td>
+            <td><%= more_home.baths %></td>
+            <td><%= more_home.sq_ft %></td>
+            <td><%= more_home.featured %></td>
+            <td><%= more_home.home.title %></td>
+            <td><%= link_to 'Show', admin_more_home_path(more_home) %> | <%= link_to 'Edit', edit_admin_more_home_path(more_home) %> | <%= link_to 'Destroy', admin_more_home_path(more_home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </table>
+      <div class="paging-info">
+        <%= page_entries_info @more_homes %>
+        <%= page_navigation_links @more_homes %>
+      </div>
+    <% elsif @search == "1" %>
+      <div class="alert alert-warning">No more_homes found</div>
+    <% else %>
+      <div class="alert alert-warning">No more_homes have been added yet.</div>
+    <% end %>
+  </div>
 <% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout();
+  });
+</script>
