--- a/app/views/smartrent/admin/residents/show.html.erb
+++ b/app/views/smartrent/admin/residents/show.html.erb
@@ -98,11 +98,11 @@
       </div>
     </div>
     <div class="col-md-4 resident-box resident-right-col password-change-form-box">
-      <%= render partial: "password_change_form" %>
+      <%= render "password_change_form" %>
     </div>
     <% if @resident.is_smartrent? %>
       <div class="col-md-10 resident-box">
-        <%= render partial: "rewards" %>
+        <%= render "rewards" %>
       </div>
     <% end %>
   </div>
