--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -1,39 +1,57 @@
-<h1>Listing rewards</h1>
-<div class="links pull-right">
-  <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default" %>
-  <%= link_to 'New reward', new_admin_reward_path, :class => "btn btn-primary" %>
-</div>
-<br />
-<br />
-<%= render partial: "filter_form" %>
-<br />
-<% if @rewards.present? %>
-  <table class="table">
-    <tr>
-      <th>Email</th>
-      <th>Amount</th>
-      <th>Property</th>
-      <th>Period Start</th>
-      <th>Period End</th>
-      <th>Type</th>
-      <th>Actions</th>
-    </tr>
-
-  <% @rewards.each do |reward| %>
-    <tr>
-      <td><%= reward.resident.email %></td>
-      <td><%= number_to_currency reward.amount %></td>
-      <td><%= reward.property.name if reward.property %></td>
-      <td><%= reward.period_start.to_s(:year_month_day) if reward.period_start %></td>
-      <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
-      <td><%= Smartrent::Reward.types[reward.type_] %></td>
-      <td><%= link_to 'Show', admin_reward_path(reward) %> | <%= link_to 'Edit', edit_admin_reward_path(reward) %> | <%= link_to 'Destroy', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </table>
-  <%= will_paginate @rewards, renderer: BootstrapPagination::Rails %>
-<% elsif @search == "1" %>
-  <div class="alert alert-warning">No Rewards Found</div>
-<% else %>
-  <div class="alert alert-warning">No Rewards Available</div>
+<% content_for(:ui_west) do %>
+  <%= render "filter_form" %>
 <% end %>
+
+<% content_for(:ui_center) do %>
+  <div class="listing">
+    <div class="links pull-right">
+      <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default" %>
+      <%= link_to 'New reward', new_admin_reward_path, :class => "btn btn-primary" %>
+    </div>
+    <h3>Listing rewards</h3>
+
+    <% if @rewards.present? %>
+      <table class="table">
+        <tr>
+          <th>Email</th>
+          <th>Amount</th>
+          <th>Property</th>
+          <th>Period Start</th>
+          <th>Period End</th>
+          <th>Type</th>
+          <th>Actions</th>
+        </tr>
+        <% @rewards.each do |reward| %>
+          <tr>
+            <td><%= reward.resident.email %></td>
+            <td><%= number_to_currency reward.amount %></td>
+            <td><%= reward.property.name if reward.property %></td>
+            <td><%= reward.period_start.to_s(:year_month_day) if reward.period_start %></td>
+            <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
+            <td><%= Smartrent::Reward.types[reward.type_] %></td>
+            <td>
+              <%= link_to 'Show', admin_reward_path(reward) %> | 
+              <%= link_to 'Edit', edit_admin_reward_path(reward) %> | 
+              <%= link_to 'Destroy', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+      <div class="paging-info">
+        <%= page_entries_info @rewards %>
+        <%= page_navigation_links @rewards %>
+      </div>
+    <% elsif @search == "1" %>
+      <div class="alert alert-warning">No rewards found</div>
+    <% else %>
+      <div class="alert alert-warning">No rewards have been added yet.</div>
+    <% end %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout();
+  });
+</script>
