--- a/app/views/layouts/smartrent/application.html.erb
+++ b/app/views/layouts/smartrent/application.html.erb
@@ -10,9 +10,7 @@
     <link rel="canonical" href="http://www.bozzutosmartrent.com/">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <link rel="icon" href="http://nagalskiy-evgeniy.com/favicon.png" type="image/png">
-    <link rel="icon" href="http://nagalskiy-evgeniy.com/chermash-igor/bozzuto/bozzutosmartrent-wip/assets/images/favicon.png" type="image/png">
-    <link rel="shortcut icon" href="http://nagalskiy-evgeniy.com/chermash-igor/bozzuto/bozzutosmartrent-wip/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>Welcome to SmartRent | Bozzuto's SmartRent Program | SmartRent Bozzuto</title>
     <meta name="description" content="Earn credits towards a new Bozzuto Home when you live in a Bozzuto SmartRent apartment community. Here&#39;s what you need to know.">
     <meta property="og:title" content="Welcome to SmartRent | Bozzuto&#39;s SmartRent Program | SmartRent Bozzuto">
