--- a/app/views/smartrent/admin/features/_form.html.erb
+++ b/app/views/smartrent/admin/features/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for([:admin, @admin_feature], html: {:class => "form-horizontal"}) do |f| %>
   <% if @admin_feature.errors.any? %>
-    <%= render partial: "shared/form_errors", :locals => {:errors => @admin_feature.errors} %>
+    <%= render "shared/form_errors", :locals => {:errors => @admin_feature.errors} %>
   <% end %>
   <fieldset>
     <div class="form-group">
       <%= f.label :name, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :name, :class => "form-control input-md" %>
+        <%= f.text_field :name, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
