--- a/app/views/smartrent/admin/features/import.html.erb
+++ b/app/views/smartrent/admin/features/import.html.erb
@@ -4,7 +4,7 @@
     <div class="form-group">
       <%= label_tag :file, nil, class: "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= file_field_tag :file, :class => "form-control input-md" %>
+        <%= file_field_tag :file, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
