--- a/app/views/smartrent/admin/features/index.html.erb
+++ b/app/views/smartrent/admin/features/index.html.erb
@@ -1,29 +1,44 @@
-<h1>Listing Features</h1>
-<div class="links pull-right">
-  <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default" %>
-  <%= link_to 'New Feature', new_admin_feature_path, :class => "btn btn-primary" %>
-</div>
-<br />
-<br />
-<%= render partial: "filter_form" %>
-<br />
-<% if @admin_features.present? %>
-  <table class="table">
-    <tr>
-      <th>Name</th>
-      <th>Actions</th>
-    </tr>
-
-    <% @admin_features.each do |admin_feature| %>
-      <tr>
-        <td><%= admin_feature.name %></td>
-        <td><%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | <%= link_to 'Destroy', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </table>
-  <%= will_paginate @admin_features, renderer: BootstrapPagination::Rails %>
-<% elsif @search == "1" %>
-  <div class="alert alert-warning"> No Features found</div>
-<% else %>
-  <div class="alert alert-warning"> No Features available</div>
+<% content_for(:ui_west) do %>
+  <%= render "filter_form" %>
 <% end %>
+
+<% content_for(:ui_center) do %>
+  <div class="listing">
+    <div class="links pull-right">
+      <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default" %>
+      <%= link_to 'New Feature', new_admin_feature_path, :class => "btn btn-primary" %>
+    </div>
+    <h3>Listing admin_features</h3>
+
+    <% if @admin_features.present? %>
+      <table class="table">
+        <tr>
+          <th>Name</th>
+          <th>Actions</th>
+        </tr>
+
+        <% @admin_features.each do |admin_feature| %>
+          <tr>
+            <td><%= admin_feature.name %></td>
+            <td><%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | <%= link_to 'Destroy', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </table>
+      <div class="paging-info">
+        <%= page_entries_info @admin_features %>
+        <%= page_navigation_links @admin_features %>
+      </div>
+    <% elsif @search == "1" %>
+      <div class="alert alert-warning">No admin_features found</div>
+    <% else %>
+      <div class="alert alert-warning">No admin_features have been added yet.</div>
+    <% end %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout();
+  });
+</script>
