--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_for([:admin, @home], :html => {:class => "form-horizontal"}) do |f| %>
   <% if @home.errors.any? %>
-    <%= render partial: "shared/form_errors", :locals => {:errors => @home.errors} %>
+    <%= render "shared/form_errors", :locals => {:errors => @home.errors} %>
   <% end %>
   <fieldset>
   <div class="field">
     <div class="form-group">
       <%= f.label :title, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :title, :class => "form-control input-md" %>
+        <%= f.text_field :title, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -15,7 +15,7 @@
     <div class="form-group">
       <%= f.label :video_url, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.url_field :video_url, :class => "form-control input-md" %>
+        <%= f.url_field :video_url, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -23,7 +23,7 @@
     <div class="form-group">
       <%= f.label :phone_number, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :phone_number, :class => "form-control input-md" %>
+        <%= f.text_field :phone_number, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -31,7 +31,7 @@
     <div class="form-group">
       <%= f.label :address, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :address, :class => "form-control input-md" %>
+        <%= f.text_field :address, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -39,7 +39,7 @@
     <div class="form-group">
       <%= f.label :city, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :city, :class => "form-control input-md" %>
+        <%= f.text_field :city, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
     <div class="form-group">
       <%= f.label :state, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :state, :class => "form-control input-md" %>
+        <%= f.text_field :state, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
     <div class="form-group">
       <%= f.label :website, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.url_field :website, :class => "form-control input-md" %>
+        <%= f.url_field :website, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
     <div class="form-group">
       <%= f.label :home_page_desc, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :home_page_desc, :class => "form-control input-md" %>
+        <%= f.text_field :home_page_desc, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
     <div class="form-group">
       <%= f.label :search_page_description, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_area :search_page_description, :class => "form-control input-md" %>
+        <%= f.text_area :search_page_description, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -79,7 +79,7 @@
     <div class="form-group">
       <%= f.label :description, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_area :description, :class => "form-control input-md" %>
+        <%= f.text_area :description, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -87,7 +87,7 @@
     <div class="form-group">
       <%= f.label :latitude, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :latitude, :class => "form-control input-md" %>
+        <%= f.text_field :latitude, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -95,7 +95,7 @@
     <div class="form-group">
       <%= f.label :longitude, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :longitude, :class => "form-control input-md" %>
+        <%= f.text_field :longitude, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -103,7 +103,7 @@
     <div class="form-group">
       <%= f.label :image, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.file_field :image, :class => "form-control input-md" %>
+        <%= f.file_field :image, :class => "form-control" %>
       </div>
     </div>
   </div>
@@ -111,7 +111,7 @@
     <div class="form-group">
       <%= f.label :image_description, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :image_description, :class => "form-control input-md" %>
+        <%= f.text_field :image_description, :class => "form-control" %>
       </div>
     </div>
   </div>
