--- a/app/views/smartrent/admin/properties/_filter_form.html.erb
+++ b/app/views/smartrent/admin/properties/_filter_form.html.erb
@@ -1,44 +1,20 @@
-<h3>Filter Properties</h3>
-<%= form_tag({}, {:method => "get", :class => "form-horizontal"}) do %>
-  <fieldset>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "ID", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :_id, params[:_id], :class => "form-control input-md" %>
-        </div>
-      </div>
+<div id="property-search">
+  <h3>Property Search</h3>
+  <%= form_tag({}, {:method => "get"}) do %>
+    <div class="form-group">
+      <%= text_field_tag :_id, params[:_id], :class => "form-control", :placeholder => "Property ID" %>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :name, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :name, params[:name], :class => "form-control input-md" %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= text_field_tag :name, params[:name], :class => "form-control", :placeholder => "Property Name" %>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :status, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= select_tag :status, options_for_select(Smartrent::Property.statuses.collect{|key,value| [value, key]}, params[:status]), {:include_blank => "--Select Status--", :class => "form-control input-md"}%>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= select_tag :status, options_for_select(Smartrent::Property.statuses.collect{|key,value| [value, key]}, params[:status]), 
+            {:include_blank => "--Select Status--", :class => "form-control"}%>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "Website Url", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :website_url, params[:website_url], :class => "form-control input-md" %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= text_field_tag :website_url, params[:website_url], :class => "form-control", :placeholder => "Website URL" %>
     </div>
     <%= hidden_field_tag "search", "1" %>
-    <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
-        <%= submit_tag "Filter", :class => "btn btn-primary" %>
-      </div>
-    </div>
-    </fieldset>
-<% end %>
+    <%= submit_tag "Search", :class => "btn btn-default btn-block search" %>
+  <% end %>
+</div>
