--- a/app/views/smartrent/admin/properties/_search_results.html.erb
+++ b/app/views/smartrent/admin/properties/_search_results.html.erb
@@ -1,3 +1,3 @@
 <% @propertys_grouped_by_states.each do |state,property|%>
-  <%= render partial: "row", locals: {property: property, state: state}%>
+  <%= render "row", locals: {property: property, state: state}%>
 <% end%>
