--- a/app/views/smartrent/admin/resident_properties/_form.html.erb
+++ b/app/views/smartrent/admin/resident_properties/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_for([:admin, @resident_property], :html => {:class => "form-horizontal"}) do |f| %>
   <% if @resident_property.errors.any? %>
-    <%= render partial: "shared/form_errors", :locals => {:errors => @resident_property.errors} %>
+    <%= render "shared/form_errors", :locals => {:errors => @resident_property.errors} %>
   <% end %>
   <fieldset>
     <div class="field">
       <div class="form-group">
         <%= f.label :property_id, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%#= f.collection_select :property_id, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md"} %>
+          <%#= f.collection_select :property_id, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control"} %>
           <%= @resident_property.property.name %>
         </div>
       </div>
@@ -17,26 +17,26 @@
         <%= f.label :resident_id, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
           <%= @resident_property.resident.name %>
-          <%#= f.collection_select :resident_id, Smartrent::Resident.all, :id, :name, {:include_blank => "--Select Resident--"}, {:class => "form-control input-md"} %>
+          <%#= f.collection_select :resident_id, Smartrent::Resident.all, :id, :name, {:include_blank => "--Select Resident--"}, {:class => "form-control"} %>
         </div>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :house_hold_size, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.number_field :house_hold_size, :class => "form-control input-md" %>
+        <%= f.number_field :house_hold_size, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :pets_count, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.number_field :pets_count, :class => "form-control input-md" %>
+        <%= f.number_field :pets_count, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :move_in_date, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.date_select :move_in_date, :class => "form-control input-md" %>
+        <%= f.date_select :move_in_date, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
@@ -48,13 +48,13 @@
     <div class="form-group">
       <%= f.label :contract_signing_date, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.date_select :contract_signing_date, :class => "form-control input-md" %>
+        <%= f.date_select :contract_signing_date, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :status, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.select :status, Smartrent::ResidentProperty.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status--"}, {:class => "form-control input-md"} %>
+        <%= f.select :status, Smartrent::ResidentProperty.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status--"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
