--- a/app/views/smartrent/admin/residents/_filter_form.html.erb
+++ b/app/views/smartrent/admin/residents/_filter_form.html.erb
@@ -1,44 +1,19 @@
-<h3>Filter Residents</h3>
-<%= form_tag({}, {:method => "get", :class => "form-horizontal"}) do %>
-  <fieldset>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "ID", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :_id, params[:_id], :class => "form-control input-md" %>
-        </div>
-      </div>
+<div id="resident-search">
+  <h3>Resident Search</h3>
+  <%= form_tag({}, {:method => "get"}) do %>
+    <div class="form-group">
+      <%= text_field_tag :_id, params[:_id], :class => "form-control", :placeholder => "ID" %>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :name, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :name, params[:name], :class => "form-control input-md" %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= text_field_tag :name, params[:name], :class => "form-control", :placeholder => "Name" %>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :status, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= select_tag :status, options_for_select(Smartrent::Resident.smartrent_statuses.collect{|key,value| [value, key]}, params[:status]), {:include_blank => "--Select Status--", :class => "form-control input-md"}%>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= select_tag :status, options_for_select(Smartrent::Resident.smartrent_statuses.collect{|key,value| [value, key]}, params[:status]), {:include_blank => "--Select Status--", :class => "form-control"}%>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "Email", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :email, params[:email], :class => "form-control input-md" %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= text_field_tag :email, params[:email], :class => "form-control", :placeholder => "Email" %>
     </div>
     <%= hidden_field_tag "search", "1" %>
-    <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
-        <%= submit_tag "Filter", :class => "btn btn-primary" %>
-      </div>
-    </div>
-    </fieldset>
-<% end %>
+    <%= submit_tag "Search", :class => "btn btn-default btn-block search" %>
+  <% end %>
+</div>
