--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -1,122 +1,122 @@
 <%= form_for([:admin, @resident], html: {:class => "form-horizontal"}) do |f| %>
   <% if @resident.errors.any? %>
-    <%= render partial: "shared/form_errors", :locals => {:errors => @resident.errors} %>
+    <%= render "shared/form_errors", :locals => {:errors => @resident.errors} %>
   <% end %>
   <fieldset>
     <div class="form-group">
       <%= f.label :name, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :name, :class => "form-control input-md" %>
+        <%= f.text_field :name, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :email, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :email, :class => "form-control input-md" %>
+        <%= f.text_field :email, :class => "form-control" %>
       </div>
     </div>
     <% if @resident.new_record? %>
       <div class="form-group">
         <%= f.label :password, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.password_field :password, :class => "form-control input-md" %>
+          <%= f.password_field :password, :class => "form-control" %>
         </div>
       </div>
       <div class="form-group">
         <%= f.label :password_confirmation, :class => "col-md-2 control-label" %>
         <div class="col-md-4">
-          <%= f.password_field :password_confirmation, :class => "form-control input-md" %>
+          <%= f.password_field :password_confirmation, :class => "form-control" %>
         </div>
       </div>
     <% end %>
     <div class="form-group">
       <%= f.label :home_phone, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :home_phone, :class => "form-control input-md" %>
+        <%= f.text_field :home_phone, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :work_phone, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :work_phone, :class => "form-control input-md" %>
+        <%= f.text_field :work_phone, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :cell_phone, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :cell_phone, :class => "form-control input-md" %>
+        <%= f.text_field :cell_phone, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :company, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :company, :class => "form-control input-md" %>
+        <%= f.text_field :company, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%#= f.label :property_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%#= f.collection_select :property_ids, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control input-md", :multiple => true} %>
+        <%#= f.collection_select :property_ids, Smartrent::Property.all, :id, :name, {:include_blank => "--Select Property--"}, {:class => "form-control", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
       <%#= f.label :home_ids, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%#= f.collection_select :home_ids, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"}, {:class => "form-control input-md", :multiple => true} %>
+        <%#= f.collection_select :home_ids, Smartrent::Home.all, :id, :title, {:include_blank => "--Select Home--"}, {:class => "form-control", :multiple => true} %>
       </div>
     </div>
     <div class="form-group">
       <%#= f.label :status, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%#= f.select :status, Smartrent::Resident.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
+        <%#= f.select :status, Smartrent::Resident.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :type_, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.select :type_, Smartrent::Resident.types.collect{|key,value| [value, key]}, {:include_blank => "--Select Type"}, {:class => "form-control input-md"} %>
+        <%= f.select :type_, Smartrent::Resident.types.collect{|key,value| [value, key]}, {:include_blank => "--Select Type"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :crm_resident_id, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.collection_select :crm_resident_id, Resident.all, :id, :full_name, {:include_blank => "--Select CRM Resident--"}, {:class => "form-control input-md", :multiple => false} %>
+        <%= f.collection_select :crm_resident_id, Resident.all, :id, :full_name, {:include_blank => "--Select CRM Resident--"}, {:class => "form-control", :multiple => false} %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :address, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :address, :class => "form-control input-md" %>
+        <%= f.text_field :address, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :city, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :city, :class => "form-control input-md" %>
+        <%= f.text_field :city, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :state, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :state, :class => "form-control input-md" %>
+        <%= f.text_field :state, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :country, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :country, :class => "form-control input-md" %>
+        <%= f.text_field :country, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :zip, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :zip, :class => "form-control input-md" %>
+        <%= f.text_field :zip, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :current_community, :class => "col-md-2 control-label" %>
       <div class="col-md-4">
-        <%= f.text_field :current_community, :class => "form-control input-md" %>
+        <%= f.text_field :current_community, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
