--- a/app/views/smartrent/admin/residents/_password_change_form.html.erb
+++ b/app/views/smartrent/admin/residents/_password_change_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for([:admin, @resident], html: {:class => "form-horizontal change-password-form", :remote => true}) do |f| %>
   <div class="form-group">
     <div class="col-md-11">
-      <%= f.password_field :password, :class => "form-control input-md", :placeholder => "Password" %>
+      <%= f.password_field :password, :class => "form-control", :placeholder => "Password" %>
     </div>
   </div>
   <div class="form-group">
     <div class="col-md-11">
-      <%= f.password_field :password_confirmation, :class => "form-control input-md", :placeholder => "Confirm Password" %>
+      <%= f.password_field :password_confirmation, :class => "form-control", :placeholder => "Confirm Password" %>
     </div>
   </div>
   <div class="form-group">
