--- a/app/views/smartrent/admin/rewards/_filter_form.html.erb
+++ b/app/views/smartrent/admin/rewards/_filter_form.html.erb
@@ -1,60 +1,34 @@
-<h3>Filter Rewards</h3>
-<%= form_tag({}, {:method => "get", :class => "form-horizontal"}) do %>
-  <fieldset>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "ID", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= text_field_tag :_id, params[:_id], :class => "form-control input-md" %>
-        </div>
-      </div>
+<div id="reward-search">
+  <h3>Reward Search</h3>
+  <%= form_tag({}, {:method => "get"}) do %>
+    <div class="form-group">
+      <%= text_field_tag :_id, params[:_id], :class => "form-control", :placeholder => "ID" %>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :property_id, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= select_tag :property_id, options_for_select(Smartrent::Reward.properties.collect{|p| [p.name, p.id]}, params[:property_id]), {:include_blank => "--Select Property--", :class => "form-control input-md"}%>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= select_tag :property_id, options_for_select(Smartrent::Reward.properties.collect{|p| [p.name, p.id]}, params[:property_id]), {:include_blank => "--Select Property--", :class => "form-control"}%>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", :resident_id, :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= select_tag :resident_id, options_for_select(Smartrent::Reward.residents.collect{|r| [r.email, r.id]}, params[:resident_id]), {:include_blank => "--Select Resident--", :class => "form-control input-md"}%>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= select_tag :resident_id, options_for_select(Smartrent::Reward.residents.collect{|r| [r.email, r.id]}, params[:resident_id]), {:include_blank => "--Select Resident--", :class => "form-control"}%>
     </div>
-    <div class="field">
-      <div class="form-group">
-        <%= label_tag "", "Type", :class => "col-md-2 control-label" %>
-        <div class="col-md-4">
-          <%= select_tag :type_, options_for_select(Smartrent::Reward.types.collect{|key,value| [value, key]}, params[:type_]), {:include_blank => "--Select Type--", :class => "form-control input-md"}%>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= select_tag :type_, options_for_select(Smartrent::Reward.types.collect{|key,value| [value, key]}, params[:type_]), {:include_blank => "--Select Type--", :class => "form-control"}%>
     </div>
-    <div class="field">
+    <% if false %>
       <div class="form-group">
         <%#= label_tag "", "Period Start", :class => "col-md-2 control-label" %>
         <div class="col-md-3">
-          <%#= date_select "", :period_start, :selected => params[:period_start], include_blank: true, :class => "form-control input-md" %>
+          <%#= date_select "", :period_start, :selected => params[:period_start], include_blank: true, :class => "form-control" %>
         </div>
       </div>
-    </div>
-    <div class="field">
       <div class="form-group">
         <%#= label_tag "", "Period End", :class => "col-md-2 control-label" %>
         <div class="col-md-3">
-          <%#= date_select "", :period_end, :selected => params[:period_end], include_blank: true, :class => "form-control input-md" %>
+          <%#= date_select "", :period_end, :selected => params[:period_end], include_blank: true, :class => "form-control" %>
         </div>
       </div>
-    </div>
+    <% end %>
+    
     <%= hidden_field_tag "search", "1" %>
-    <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
-        <%= submit_tag "Filter", :class => "btn btn-primary" %>
-      </div>
-    </div>
-    </fieldset>
-<% end %>
+    <%= submit_tag "Search", :class => "btn btn-default btn-block search" %>
+  <% end %>
+</div>
